<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/actionBarSize"
    android:background="?android:attr/colorPrimary"
    android:elevation="4dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/buttonBack"
        style="@style/AppBar.Icon"
        android:contentDescription="@string/close"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/appBarTitle"
        style="@style/AppBar.Title"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/buttonReset"
        style="@style/AppBar.Icon"
        android:contentDescription="@string/reset"
        android:src="@drawable/ic_reset"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/buttonSave"
        style="@style/AppBar.Icon"
        android:contentDescription="@string/save"
        android:src="@drawable/ic_save"
        android:visibility="gone" />
</LinearLayout>
